--- a/xzs-student/package.json
+++ b/xzs-student/package.json
@@ -57,7 +57,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
-    "node-sass": "^6.0.1",
+    "node-sass": "npm:sass@^1.69.5",
     "sass-loader": "^10.5.0",
     "svg-sprite-loader": "4.1.6",
     "vue-template-compiler": "^2.7.15"
