--- a/xzs-student/package.json
+++ b/xzs-student/package.json
@@ -1,11 +1,11 @@
 {
   "name": "xzs-student",
   "version": "3.9.0",
-  "author": "武汉思维跳跃科技有限公司",
+  "author": " ",
   "description": "项目管理课程",
   "license": "AGPL-3.0",
   "private": true,
-  "homepage": "https://www.mindskip.net/xzs.html",
+
   "scripts": {
     "serve": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build --mode prod",
@@ -14,14 +14,6 @@
     "build:pre": "vue-cli-service build --mode pre",
     "build:prod": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://gitee.com/mindskip/xzs-mysql.git"
-  },
-  "bugs": {
-    "url": "https://gitee.com/mindskip/xzs-mysql/issues",
-    "email": "mindskip@qq.com"
   },
   "husky": {
     "hooks": {
