--- a/xzs-admin/package.json
+++ b/xzs-admin/package.json
@@ -1,7 +1,7 @@
 {
     "name": "xzs-admin",
     "version": "3.9.0",
-    "author": "武汉思维跳跃科技有限公司",
+    "author": "SPM-4",
     "description": "项目管理课程学习管理系统",
     "license": "AGPL-3.0",
     "private": true,
